# scf-dtmf

./: .gitignore  .gitmodules  README.md
common/: access.h
docs/report/: README.md  report.typ  title.typ
docs/report/chapters/: IP_correlation.typ  address_mapping_table.typ  algorithme.typ  conclusion.typ  contraintes.typ  design.typ  dma.typ  driver.typ  getting_started.typ  implementation.typ  introduction.typ  memoire.typ  start_guide.typ  user.typ  verification.typ
docs/schema/: schema_bloc.excalidraw
driver/: Makefile  access.c  access.h  msgdma.h
dtmf/: CMakeLists.txt  makefile
dtmf/src/: buffer.c  buffer.h  dtmf.c  dtmf.h  dtmf_decoder.c  dtmf_encoder.c  dtmf_private.h  fft.c  fft.h  file.c  file.h  fpga.c  fpga.h  main.c  utils.c  utils.h  wave.c  wave.h  window.h
eda/: correlation_RAM.bsf  correlation_RAM.cmp  correlation_RAM.inc  correlation_RAM.qip  correlation_RAM.vhd  correlation_RAM_inst.vhd  correlation_RAM_syn.v  correlation_divide.bsf  correlation_divide.cmp  correlation_divide.qip  correlation_divide.vhd  correlation_divide_inst.vhd  correlation_divide_syn.v  qsys_system.qsys  unsaved.qsys
eda/src_vhdl/fpga_dtmf/hard/src/: DE1_SoC_top.vhd  correlation.vhd
image/: de1soc.its
scripts/: pgm_fpga.py
tests/: main.c  run_test.sh
